...
    <string name="title_activity_maps" translatable="false">MapsActivity</string>
    <string name="content_description" translatable="false">Upload story</string>
    <string name="preview_image" translatable="false">Preview image</string>


    <string name="success_login_message">You have successfully logged in. Can\'t wait to share your story, huh?</string>
    <string name="positive_reply">Next</string>
    <string name="success_signup_message">Your email account is ready. Come on, log in and share your story.</string>
    <string name="success_upload_message">You have successfully uploaded the story, return to home."</string>

    <string name="signup">Sign up</string>
    <string name="login">Login</string>
    <string name="message_welcome_page">Want to share knowledge about Android, iOS, Machine Learning, Cloud, Frontend, Backend, and other IT fields? Just do it on Dicoding Story!</string>
...
    <string name="title_signup_page">Complete your details below</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="message_login_page">Please enter your details first</string>
    <string name="title_login_page">Ready to share your story?</string>
    <string name="name">Name</string>
    <string name="logout">Logout</string>
    <string name="language">Language settings</string>
    <string name="button_back">Back to home</string>
    <string name="camera">Camera</string>
    <string name="upload">Upload</string>
    <string name="gallery">Gallery</string>
    <string name="description_hint">Description</string>
...
